--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-mixin": "^3.0.5",
     "redux": "^3.5.2",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {},
   "repository": {
